<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drag&amp;Drop</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="o2">O2</string>
    <string name="meteor">Meteor</string>
    <string name="vodafone">Vodafone</string>
    <string name="bitbuzz">BitBuzz</string>
    <string name="target">Drop Target</string>

</resources>
